# gnome-flashback

./: .gitlab-ci.yml  .gitmodules  0004-desktop-background-try-to-keep-background-window-und.patch  Makefile.am  NEWS  README.md  autogen.sh  configure.ac  gnome-flashback.doap
backends/: Makefile.am  gf-backend-native-private.h  gf-backend-native.c  gf-backend-private.h  gf-backend-x11-cm-private.h  gf-backend-x11-cm.c  gf-backend-x11-nested-private.h  gf-backend-x11-nested.c  gf-backend-x11-private.h  gf-backend-x11.c  gf-backend.c  gf-backend.h  gf-crtc-mode-info-private.h  gf-crtc-mode-info.c  gf-crtc-mode-private.h  gf-crtc-mode.c  gf-crtc-private.h  gf-crtc-xrandr-private.h  gf-crtc-xrandr.c  gf-crtc.c  gf-direction.h  gf-display-config-shared.h  gf-edid-parse.c  gf-edid-private.h  gf-gpu-private.h  gf-gpu-xrandr-private.h  gf-gpu-xrandr.c  gf-gpu.c  gf-logical-monitor-config-private.h  gf-logical-monitor-config.c  gf-logical-monitor-private.h  gf-logical-monitor.c  gf-monitor-config-manager-private.h  gf-monitor-config-manager.c  gf-monitor-config-migration-private.h  gf-monitor-config-migration.c  gf-monitor-config-private.h  gf-monitor-config-store-private.h  gf-monitor-config-store.c  gf-monitor-config-utils.c  (+40 more)
daemons/clipboard/: Makefile.am  gf-clipboard-main.c  gf-clipboard.c  gf-clipboard.h  gsd-clipboard-manager.c  xutils.c
daemons/idle-monitor/: Makefile.am  flashback-idle-monitor.c  flashback-idle-monitor.h  gf-idle-monitor-main.c  meta-backend.c  meta-idle-monitor-xsync.c  meta-idle-monitor.c  meta-idle-monitor.h  org.gnome.Mutter.IdleMonitor.xml
daemons/media-keys/: Makefile.am  gf-media-keys-main.c  gf-media-keys.c  gf-media-keys.h  gsd-media-keys-manager.c  gsd-media-keys-manager.h  gsd-screenshot-utils.c  media-keys.h  shortcuts-list.h
daemons/polkit/: Makefile.am  flashback-authenticator.c  flashback-listener.c  flashback-polkit-dialog.c  gf-polkit-main.c  polkit.gresource.xml
data/: Makefile.am  flashback-inhibit-dialog.ui  gnome-flashback-applications.menu  gnome-flashback-compiz.desktop.in  gnome-flashback-compiz.desktop.in.in  gnome-flashback-compiz.session.in  gnome-flashback-init.desktop.in  gnome-flashback-metacity.desktop.in  gnome-flashback-metacity.desktop.in.in  gnome-flashback-metacity.session.in  gnome-flashback-nm-applet.desktop.in  gnome-flashback-screensaver.desktop.in  gnome-flashback.desktop.in  gnome-flashback.session.in  org.gnome.gnome-flashback.gschema.xml  org.gnome.gnome-flashback.gschema.xml.in.in
data/applications/: Makefile.am  gnome-flashback-init.desktop.in  gnome-flashback.desktop.in  gnome-flashback.desktop.in.in
data/autostart/: Makefile.am  gnome-flashback-geoclue-demo-agent.desktop.in.in  gnome-flashback-nm-applet.desktop.in  gnome-flashback-polkit.desktop.in.in  gnome-flashback-screensaver.desktop.in
data/compizconfig/: Makefile.am  gnome-flashback.conf  gnome-flashback.ini
data/directories/: Makefile.am  X-GNOME-Flashback-Science.directory.desktop.in  X-GNOME-Flashback-Settings-System.directory.desktop.in  X-GNOME-Flashback-Settings.directory.desktop.in
data/gnome-panel/: Makefile.am  gnome-flashback.layout
data/keybindings/: 50-gnome-flashback-screenshots.xml  Makefile.am
data/menus/: Makefile.am  gnome-flashback-applications.menu
data/schemas/: 00_gnome-flashback.gschema.override  Makefile.am  org.gnome.gnome-flashback.desktop-background.gschema.xml  org.gnome.gnome-flashback.desktop.background.gschema.xml  org.gnome.gnome-flashback.desktop.gschema.xml  org.gnome.gnome-flashback.desktop.icons.gschema.xml  org.gnome.gnome-flashback.gschema.xml  org.gnome.gnome-flashback.input-sources.gschema.xml  org.gnome.gnome-flashback.keybindings.gschema.xml  org.gnome.gnome-flashback.notifications.gschema.xml  (+3 more)
data/sessions/: Makefile.am  (+3 more)
dbus/: Makefile.am  org.freedesktop.Accounts.User.xml  org.freedesktop.Application.xml  org.freedesktop.DBus.xml  org.freedesktop.DisplayManager.Seat.xml  org.freedesktop.FileManager1.xml  org.freedesktop.Notifications.xml  org.freedesktop.UPower.Device.xml  org.freedesktop.login1.Manager.xml  org.freedesktop.login1.Session.xml  org.gnome.Flashback.InputSources.xml  org.gnome.Nautilus.FileOperations2.xml  org.gnome.ScreenSaver.xml  org.gnome.SessionManager.ClientPrivate.xml  org.gnome.SessionManager.EndSessionDialog.xml  org.gnome.SessionManager.xml  org.gnome.SettingsDaemon.Rfkill.xml  org.gnome.Shell.AudioDeviceSelection.xml  org.gnome.Shell.Introspect.xml  org.gnome.Shell.Screencast.xml  org.gnome.Shell.Screenshot.xml  org.gnome.Shell.xml  org.gtk.Notifications.xml
gnome-flashback/: Adwaita.css  HighContrast.css  Makefile.am  flashback-application.c  flashback-application.h  flashback-desktop-background.c  flashback-desktop-background.h  flashback-display-config.c  flashback-display-config.h  flashback-end-session-dialog.c  flashback-end-session-dialog.h  flashback-gsettings.h  flashback-idle-monitor.c  flashback-inhibit-dialog.c  flashback-inhibit-dialog.h  flashback-main.c  flashback-session.c  flashback.gresource.xml  gf-application.c  gf-application.h  gf-confirm-display-change-dialog.c  gf-confirm-display-change-dialog.h  gf-main.c  gf-session.c  gf-session.h  gf-ui-scaling.c  gf-ui-scaling.h  gf-wm.c  gf-wm.h  gnome-flashback.desktop.in  org.gnome.gnome-flashback.gschema.xml.in.in
gnome-flashback-init/: Makefile.am  gnome-flashback-init.desktop.in  main.c
gvc/: Makefile.am  gvc-enum-types.c.in  gvc-enum-types.h.in
libstatus-notifier/: Makefile.am  sn-dbus-item-server-v0.c  sn-dbus-item-server-v0.h  sn-dbus-item-server.c  sn-dbus-item-server.h  sn-dbus-item.c  sn-dbus-item.h  sn-dbus-menu-server.c  sn-dbus-menu-server.h  sn-enum-types.c.in  sn-enum-types.h.in  sn-item-private.h  sn-item.c  sn-item.h  sn-watcher-private.h
system-indicators/: Makefile.am  si-applet.c  si-applet.h  si-bluetooth.c  si-bluetooth.h  si-desktop-menu-item.c  si-desktop-menu-item.h  si-indicator.c  si-indicator.h  si-input-source.c  si-input-source.h  si-input-sources.c  si-input-sources.h  si-menu-bar.c  si-menu-bar.h  si-module.c  si-power.c  si-power.h  si-volume.c  si-volume.h
(+368 files in other folders)
